refactor: move converter from utils
Move `linkml.utils.converter` to `linkml.converter.cli`, which is more
consistent with the structuring of other tools in the repo:
- Package for the top-level functionality.
- CLI specific to that functionality inside of that package.
- Integration into higher-level CLI.

Signed-off-by: Silvano Cirujano Cuesta <silvano.cirujano-cuesta@siemens.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -128,7 +128,7 @@ gen-sqltables = "linkml.generators.sqltablegen:cli"
 gen-summary = "linkml.generators.summarygen:cli"
 gen-project = "linkml.generators.projectgen:cli"
 run-tutorial = "linkml.utils.execute_tutorial:cli"
-linkml-convert = "linkml.utils.converter:cli"
+linkml-convert = "linkml.converter.cli:cli"
 linkml-lint = "linkml.linter.cli:main"
 linkml-sqldb = "linkml.utils.sqlutils:main"
 linkml-validate = "linkml.validator.cli:cli"
