fix(loader): inline as dict by default if ident
The default way to inline an object, when the class has an identifier is
not defined. But the Python generator is applying a default itself.

The loader should apply that default so that it is consistently applied
throughtout all consumers (like all the generators). This patch fixes
it.

Signed-off-by: Silvano Cirujano Cuesta <silvano.cirujano-cuesta@siemens.com>

--- a/tests/test_issues/__snapshots__/issue_167b.yaml
+++ b/tests/test_issues/__snapshots__/issue_167b.yaml
@@ -304,6 +304,7 @@ slots:
     range: annotation
     multivalued: true
     inlined: true
+    inlined_as_list: false
   extensions:
     name: extensions
     definition_uri: https://w3id.org/linkml/extensions
@@ -319,6 +320,7 @@ slots:
     range: extension
     multivalued: true
     inlined: true
+    inlined_as_list: false
   extension_tag:
     name: extension_tag
     definition_uri: https://w3id.org/linkml/extension_tag
